--- a/styles/_bootstrap.scss
+++ b/styles/_bootstrap.scss
@@ -8,9 +8,12 @@
 .jumbotron {
   padding-top: 0px;
   position: relative;
-  margin-top: 35px;
+  margin-top: 70px;
   background-color: transparent !important;
   height: 100%;
+  @media only screen and (min-width: 992px){
+    margin-top: 35px;
+  }
 }
 
 //Pills
