--- a/styles/_custom.scss
+++ b/styles/_custom.scss
@@ -19,14 +19,20 @@
   height: 100%;
 }
 
-.sections-content{
-  height: 500px;
-}
-
 .hr{
   height: 100%;
   width: 1px;
   border: 1px solid;
+}
+
+.square{
+  width: 50%;
+}
+
+.square:after {
+  content: ".";
+  display: block;
+  padding-bottom: 100%;
 }
 
 //Positioning Styles
@@ -76,356 +82,7 @@
   opacity: 0.45;
 }
 
-
-//Title Sytles
-.fauxAstronaut{
-  top: 50%;
-  left: 50%;
-  transform: scale(1.25);
-}
-
-#fauxPhone{
-  top: 7%;
-  left: 15%;
-}
-
-.title-container{
-  position: relative;
-  height: 100vh;
-  // max-height: 750px;
-  h1,h2 {
-    text-align: center !important;
-    @media only screen and (min-width: 992px){
-      text-align: left !important;
-    }
-  }
-}
-
-.title-first{
-  font-size: 100px;
-  line-height: 0;
-  @media only screen and (min-width: 992px){
-    font-size: 190px;
-  }
-}
-
-.title-second{
-  font-size: 92px;
-  line-height: 0;
-  @media only screen and (min-width: 992px){
-    font-size: 175px;
-    line-height: 100px;
-  }
-}
-
-.title-caption{
-  font-size: 20px; 
-  line-height: 0;
-  @media only screen and (min-width: 992px){
-    font-size: 40px;
-  }
-}
-
-.clip-svg {
-  clip-path: url(#svgClip);
-}
-
-//List Styles
-.main-list{
-  padding: 0px !important;
-  li{
-    display: block;
-    line-height: 1.25;
-  }
-  span{
-    font-family: $secondary-font-stack;
-    text-transform: uppercase;
-    font-size: 0.75em;
-  }
-  i{
-    vertical-align: middle;
-    width: 35px;
-  }
-}
-
-//Section Sytles
-.fauxScreen{
-  margin: 0 auto;
-  border-radius: 10px;
-  background: rgba( 255, 255, 255, 0.45 );
-  // box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-  // box-shadow: rgba(64, 62, 61, 0.15) 0px 5px 15px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
-  box-shadow: rgba(64, 62, 61, 0.15) 0px 5px 15px;
-  backdrop-filter: blur( 4.0px );
-  -webkit-backdrop-filter: blur( 4.0px );
-  border: 2px solid rgba( 255, 255, 255, 0.18 );
-  overflow: hidden;
-}
-
-.activeOption{
-  width: 3px;
-  height: 3px;
-  border-radius: 3px;
-  background: $secondary-color;
-  left: 20px;
-  top: 17px;
-}
-
-//Coding Sytles
-.codingAnimation{
-  
-  .fauxScreen{
-    width: 500px;
-    height: 280px;
-
-    .fauxSiteContent{
-      height: calc(100% - 100px);
-    }
-    
-    .fauxHeader{
-      position: relative;
-      margin-top: -50px;
-      padding-top: 15px;
-      padding-left: 15px;
-      width: 100%;
-      height: 50px;
-
-      .fauxLogo{
-        width: 100px;
-        height: 35px;
-        position: absolute;
-        top: 7px;
-        left: 10px;
-      }
-
-      .fauxOptions{
-        left: 115px;
-        font-size: 9px;
-        color: $secondary-color;
-        font-weight: 600;
-
-        i{
-          font-size: 1rem;
-        }
-      }
-    }
-
-    .fauxOptions.fauxFunctions{
-      left: unset;
-      right: 15px;
-      top: 15px;
-  
-      .fauxSearch{
-        border: 2px solid $secondary-color;
-        border-radius: 25px;
-        border-radius: 25px;
-        width: 100px;
-      }
-    }
-
-    h1,
-    h3,
-    h6,
-    p{
-      color: $secondary-color;
-    }
-
-    p{
-      font-size: 0.7em;
-    }
-    
-    img{
-      width: 95%;
-    }
-
-    .fauxButton{
-      @extend p;
-      background: $primary-gradient;
-      color: $tertiary-color;
-      border-radius: 50px;
-    }
-
-    .fauxSelection{
-      height: 125px;
-      border-radius: 4px;
-      background: -webkit-linear-gradient(120deg, rgba(255, 94, 98, 0.4) 0%, rgba(255, 153, 102, 0.4) 100%);
-    }
-  }
-
-  .codeAL{
-    height: 100%;
-    display: flex;
-  }
-
-  .codeAB{
-    display: flex;
-    height: 40px;
-    margin-top: 10px;
-
-    .activeOption{
-      left: 49.45%;
-      top: 82.5%;
-    }
-  }
-
-  #fauxStats{ 
-    ul{
-      display: grid;
-      grid-template-columns: 35% 65%;
-      grid-template-rows: auto; 
-      column-gap: 10px;
-      row-gap: 5px;
-    }
-    li,
-    p{
-      font-size: 0.6rem;
-      color: $tertiary-color;
-    }
-  }
-}
-
-//Design Sytles
-.designAnimation{
-
-  .fauxScreen{
-    width: 1280px;
-    height: 800px;
-    border-radius: 35px;
-    border-width: 10px;
-    background: rgba(255, 255, 255, 0.15);
-    backdrop-filter: blur(15px);
-    transform: scaleX(0.3) scaleY(0.3) scaleZ(0.3) rotateX(37deg) rotateY(30deg) rotateZ(-24deg) translate(-70%, -160%) skewX(16deg) skewY(0deg);
-    box-shadow: 0 19px 38px rgba(64, 62, 61, 0.15), 0 15px 12px rgba(64, 62, 61, 0);
-  }
-
-  .fauxScreen#draw{
-    background: rgba(255, 255, 255, 0.5);
-    transform: scaleX(0.3) scaleY(0.3) scaleZ(0.3) rotateX(37deg) rotateY(30deg) rotateZ(-24deg) translate(-54%, -185%) skewX(16deg) skewY(0deg);
-  }
-
-  path#drawnPath{
-    stroke-width: 25;
-    fill: transparent;
-    stroke-dashoffset: 2000;
-    stroke-dasharray: 2000;
-  }
-}
-
-//Animation Styles
-.animateAnimation{
-  .fauxScreen{
-    position: relative;
-    background: rgba( 255, 255, 255, 0.35);
-
-    .faux--floor-wrap{
-      height: 40%;
-      
-      .faux--floor{
-        display: inline-block;
-        border-radius: 3px;
-        height: 100%;
-        min-width: 50%;
-        background:rgba( 255, 255, 255, 0.35);
-        border-top: 2px solid rgba(255, 255, 255, 0.18);
-      }
-    }
-  }
-
-  .fauxScreen.bd-none{
-    backdrop-filter: none;
-  }
-  
-  #faux{
-    &--ball{
-      opacity: 0;
-    }
-  }
- 
-  .faux--screen-wrap{
-    width: 542px;
-    height: 372px;
-
-    #faux--slide{
-      transform: translateX(-100%);
-      visibility: hidden;
-    }
-
-    .faux{
-      &--top{
-        height: 10%;
-        border-radius: 0px;
-        box-shadow: none;
-      }
-
-      &--area{
-        .fauxScreen:first-child{
-          height: 198px;
-          box-shadow: none;
-          backdrop-filter: none;
-          background: none;
-        }
-
-        .fauxScreen:nth-child(2){
-          height: 75px;
-          border-radius: 0px;
-          box-shadow: none;
-          overflow: visible;
-
-          
-          .col-1,
-          .col-2, 
-          .col-3,
-          .col-6{
-            height: 1.10rem;
-            background: -webkit-linear-gradient(120deg, rgba(255, 94, 98, 0.4) 0%, rgba(255, 153, 102, 0.4) 100%);
-          }
-        }
-
-        .faux--scrub{
-          width: 1.5rem;
-          height: 100px;
-          top: -30px;
-          z-index: 50;
-          i{
-            transform: rotate(180deg);
-          }
-          div{
-            transform: translateY(-10px);
-            width: 1px;
-          }
-        }
-      }
-    }
-  }
-}
-
-//Project Styles
-.project{
-  width: 33%;
-  min-width: 320px;
-  height: 450px;
-  border-radius: 10px;
-  display: inline-block;
-
-  &-content{
-    mix-blend-mode: multiply;
-    opacity: 0.55;
-    font-weight: 700;
-    p{
-      font-size: 0.85em;
-    }
-
-    .fadeup{
-      transform: translateY(50px);
-      opacity: 0;
-      transition: transform 1.35s cubic-bezier(0.19, 1, 0.22, 1), opacity 1.35s cubic-bezier(0.19, 1, 0.22, 1);
-    }
-  }
-
-  &:hover{
-    .fadeup{
-      transform: translateY(0px);
-      opacity: 1;
-    }
-  }
+// Overflow Styles
+.overflow-x-scroll{
+  overflow-x: scroll;
 }
